<resources>
    <string name="app_name">AppForms</string>
    <string name="titulo">CALCULADORA</string>
    <string name="valnumero">Ingrese un número</string>
    <string name="valcalcular">CALCULAR</string>
    <string name="tituloimc">CALCULADORA IMC</string>
    <string name="valtalla">Ingrese su talla (cm)</string>
    <string name="valpeso">Ingrese su peso (kg)</string>
    <string name="valtituloprimo">VALIDAR NÚMERO PRIMO</string>
    <string name="valnumeroprimo">Ingrese un número</string>
</resources>